syntax = "proto3";

option go_package = "github.com/iRankHub/backend/internal/grpc/proto/authentication";

package auth;

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc BatchImportUsers(BatchImportUsersRequest) returns (BatchImportUsersResponse) {}
  rpc AdminLogin(LoginRequest) returns (LoginResponse) {}
  rpc StudentLogin(LoginRequest) returns (LoginResponse) {}
  rpc VolunteerLogin(LoginRequest) returns (LoginResponse) {}
  rpc SchoolLogin(LoginRequest) returns (LoginResponse) {}
  rpc EnableTwoFactor(EnableTwoFactorRequest) returns (EnableTwoFactorResponse) {}
  rpc DisableTwoFactor(DisableTwoFactorRequest) returns (DisableTwoFactorResponse) {}
  rpc GenerateTwoFactorOTP(GenerateTwoFactorOTPRequest) returns (GenerateTwoFactorOTPResponse) {}
  rpc VerifyTwoFactor(VerifyTwoFactorRequest) returns (LoginResponse) {}
  rpc RequestPasswordReset(PasswordResetRequest) returns (PasswordResetResponse) {}
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
  rpc BeginWebAuthnRegistration(BeginWebAuthnRegistrationRequest) returns (BeginWebAuthnRegistrationResponse) {}
  rpc FinishWebAuthnRegistration(FinishWebAuthnRegistrationRequest) returns (FinishWebAuthnRegistrationResponse) {}
  rpc BeginWebAuthnLogin(BeginWebAuthnLoginRequest) returns (BeginWebAuthnLoginResponse) {}
  rpc FinishWebAuthnLogin(FinishWebAuthnLoginRequest) returns (FinishWebAuthnLoginResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message BatchImportUsersRequest {
  repeated UserData users = 1;
}

message UserData {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string userRole = 4;
  string dateOfBirth = 5;
  int32 schoolID = 6;
  string schoolName = 7;
  string address = 8;
  string country = 9;
  string province = 10;
  string district = 11;
  string schoolType = 12;
  string contactEmail = 13;
  int32 graduationYear = 14;
  string roleInterestedIn = 15;
  string nationalID = 16;
  string safeguarding_certificate_url = 17;
  string grade = 18;
  bool hasInternship = 19;
  bool isEnrolledInUniversity = 20;
  string gender = 21;
}

message BatchImportUsersResponse {
  bool success = 1;
  string message = 2;
  int32 importedCount = 3;
  repeated string failedEmails = 4;
}

message SignUpRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  string userRole = 5;
  string dateOfBirth = 6;
  int32 schoolID = 7;
  string schoolName = 8;
  string address = 9;
  string country = 10;
  string province = 11;
  string district = 12;
  string schoolType = 13;
  string contactPersonName = 14;
  string contactPersonNumber = 15;
  string contactEmail = 16;
  string nationalID = 17;
  string schoolAttended = 18;
  int32 graduationYear = 19;
  string roleInterestedIn = 20;
  string grade = 21;
  bool hasInternship = 22;
  bool isEnrolledInUniversity = 23;
  string gender = 24;
  string safeguarding_certificate_url = 25;
}

message SignUpResponse {
  bool success = 1;
  string message = 2;
  string status = 3;
}

message LoginRequest {
  string email_or_id = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2;
  string userRole = 3;
  int32 userID = 4;
  bool require_two_factor = 5;
  bool require_password_reset = 6;
  string message = 7;
  string status = 8;
  string userName = 9;
}

message EnableTwoFactorRequest {
  string token = 1;
  int32 userID = 2;
}

message EnableTwoFactorResponse {
  bool success = 1;
  string message = 2;
}

message DisableTwoFactorRequest {
  string token = 1;
  int32 userID = 2;
}

message DisableTwoFactorResponse {
  bool success = 1;
  string message = 2;
}

message GenerateTwoFactorOTPRequest {
  string email = 1;
}

message GenerateTwoFactorOTPResponse {
  bool success = 1;
  string message = 2;
}

message VerifyTwoFactorRequest {
  string email = 1;
  string code = 2;
}

message PasswordResetRequest {
  string email = 1;
}

message PasswordResetResponse {
  bool success = 1;
}

message ResetPasswordRequest {
  string token = 1;
  string newPassword = 2;
}

message ResetPasswordResponse {
  bool success = 1;
}

message BeginWebAuthnRegistrationRequest {
  string token = 1;
  int32 userID = 2;
}

message BeginWebAuthnRegistrationResponse {
  bytes options = 1;
}

message FinishWebAuthnRegistrationRequest {
  string token = 1;
  int32 userID = 2;
  bytes credential = 3;
}

message FinishWebAuthnRegistrationResponse {
  bool success = 1;
}

message BeginWebAuthnLoginRequest {
  string email = 1;
}

message BeginWebAuthnLoginResponse {
  bytes options = 1;
}

message FinishWebAuthnLoginRequest {
  string email = 1;
  bytes credential = 2;
}

message FinishWebAuthnLoginResponse {
  bool success = 1;
  string token = 2;
}

message LogoutRequest {
  int32 userID = 1;
  string token = 2;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}